Fix bug with overlapping content

--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -11,9 +11,11 @@
 }
 
 .navigation--grey {
-    background-color: #333333;
-    position: fixed;
-    z-index: 100;
-    width: 100%;
-    box-sizing: border-box;
+  background-color: #333333;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  box-sizing: border-box;
+  top: 30px;
+  height: 52px;
 }
