--- a/src/less/blocks/page-content.less
+++ b/src/less/blocks/page-content.less
@@ -1,6 +1,6 @@
 .page-content {
   padding-left: 25px;
-  padding-top: 15px;
+  padding-top: 65px;
   padding-right: 25px;
   margin: 0 auto;
 }
