--- a/src/less/blocks/page-sidebar.less
+++ b/src/less/blocks/page-sidebar.less
@@ -1,3 +1,4 @@
 .page-sidebar {
   width: 250px;
+  padding-top: 50px;
 }
